--- a/templates/webstore/product/product_detail.html
+++ b/templates/webstore/product/product_detail.html
@@ -6,28 +6,35 @@
 {% endblock title %}
 
 {% block body %}
-    {% if object.image %}
-        <img src="/{{ object.image }}">
-    {% else %}
-        <img src={% static 'images/default.png' %}>
-    {% endif %}
-    <div class="product-card">
-        <h2>{{ object.name }}</h2>
-        <div class="product-description">{{ object.description }}</div>
-        <div class="product-price">{{ object.price }}</div>
-        <p>
-        {% for image in product.gallery %}
-            <img src="/{{ image.picture.data.url }}" alt="" width="100">
-        {% endfor %}
-        </p>
-        <form id="add-item-form" action="{% url 'cart:add-item' %}" method="GET">
-            {% csrf_token %}
-            <input id="product-id" type="hidden" value="{{ object.id }}">
-            <label>qty.
-                <input type="number" id="item-quantity">
-            </label>
-            <input type="submit" id="add-to-cart" class="btn">
-        </form>
+    <div class="row">
+        <div class="col l6 m6 s12 xs12">
+
+            <div class="carousel carousel-slider">
+                <div class="carousel-item">
+                    <img src="/{{ object.image }}">
+                </div>
+            {% for image in product.gallery %}
+                <div class="carousel-item">
+                    <img src="/{{ image.picture.data.url }}" alt="" width="100">
+                </div>
+            {% empty %}
+                <img src={% static 'images/default.png' %}>
+            {% endfor %}
+            </div>
+        </div>
+        <div class="col l6 m6 s12 xs12">
+            <h2>{{ object.name }}</h2>
+            <div class="product-description">{{ object.description }}</div>
+            <div class="product-price">{{ object.price }}</div>
+            <form id="add-item-form" action="{% url 'cart:add-item' %}" method="GET">
+                {% csrf_token %}
+                <input id="product-id" type="hidden" value="{{ object.id }}">
+                <label>qty.
+                    <input type="number" id="item-quantity">
+                </label>
+                <input type="submit" id="add-to-cart" class="btn">
+            </form>
+        </div>
     </div>
 {% endblock body %}
 
