--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -11,24 +11,12 @@
               </div>
           </div>
         </li>
-        <li>
-          <div class="collapsible-header nav_header">
-              <i class="material-icons">attach_money</i>Prices</div>
-          <div class="collapsible-body">
-              <div class="collection">
-                  <a href="#!" class="nav_link collection-item">Review prices</a>
-                  <a href="#!" class="nav_link collection-item">List for product</a>
-                  <a href="#!" class="nav_link collection-item">Add price</a>
-                  <a href="#!" class="nav_link collection-item">Price report</a>
-            </div>
-          </div>
-        </li>
-        <li>
+         <li>
           <div class="collapsible-header nav_header">
               <i class="material-icons">shopping_basket</i>Orders</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'order_panel:order-list' %}" class="nav_link collection-item">Awaiting payment</a>
+                  <a href="{% url 'order_panel:order-list' %}" class="nav_link collection-item">Order list</a>
             </div>
           </div>
         </li>
