--- a/templates/webstore/product/product_detail.html
+++ b/templates/webstore/product/product_detail.html
@@ -32,7 +32,7 @@
                 <label>qty.
                     <input type="number" id="item-quantity">
                 </label>
-                <input type="submit" id="add-to-cart" class="btn">
+                <input type="submit" id="add-to-cart" class="btn" value="Add to cart">
             </form>
         </div>
     </div>
