--- a/templates/dashboard/order/order_list.html
+++ b/templates/dashboard/order/order_list.html
@@ -14,7 +14,7 @@
 
     <!-- payment list -->
     <ul class="collection with-header col s9">
-        <li class="collection-header"><h4>Order list, status: {{ object_list.0.get_status_display }} </h4></li>
+        <li class="collection-header"><h4>Order list</h4></li>
         {%for object in object_list %}
         <a href="{% url 'order_panel:order-detail' pk=object.pk %}" class="collection-item">
             {{object}}
