--- a/templates/dashboard/order/order_update.html
+++ b/templates/dashboard/order/order_update.html
@@ -3,8 +3,50 @@
 
 
 {% block content %}
-<div class="card-panel">
-    {% include 'webstore/generic_form.html' %}
+<div class="card col s12 m12 l6">
+    <span class="card-title">Order details</span>
+
+    <div class="card-content">
+    <table>
+        <thead>
+            <tr>
+                <th>Item Name</th>
+                <th>Item Qty</th>
+                <th>Item Price</th>
+                <th>Item Value</th>
+            </tr>
+        </thead>
+
+        <tbody>
+        {% for item in order.items %}
+            <tr>
+                <td>{{ item.product.name }}</td>
+                <td>{{ item.quantity }}</td>
+                <td>{{ item.price }}</td>
+                <td>{{ item.value }}</td>
+            </tr>
+        {% endfor %}
+            <tr>
+                <td>Delivery</td>
+                <td>1</td>
+                <td>n/a</td>
+                <td>{{ order.delivery.cost }}</td>
+            </tr>
+            <tr>
+                <td>Total</td>
+                <td>n/a</td>
+                <td>n/a</td>
+                <td>{{ object.value }}</td>
+            </tr>
+        <tbody>
+    </table>
+    </div>
+</div>
+
+<div class="card col s12 m12 l6">
+    <div class="card-content">
+        {% include 'webstore/generic_form.html' %}
+    </div>
 </div>
 
 {% endblock content %}
