--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -9,6 +9,7 @@
                   <a href="{% url 'product_panel:product-list' %}" class="nav_link collection-item">Products List</a>
                   <a href="{% url 'product_panel:product-create' %}" class="nav_link nav_link collection-item">Add Product</a>
                   <a href="{% url 'product_panel:category-list' %}" class="nav_link nav_link collection-item">Category List</a>
+                  <a href="{% url 'product_panel:picture-list' %}" class="nav_link nav_link collection-item">Pictures</a>
               </div>
           </div>
         </li>
