--- a/templates/dashboard/product/product_list.html
+++ b/templates/dashboard/product/product_list.html
@@ -60,6 +60,9 @@
                                 </a>|
                                 <a href="{% url 'product_panel:product-price-list' number=object.number %}">
                                     PRICING
+                                </a>|
+                                <a href="{% url 'product_panel:product-gallery' slug=object.slug %}">
+                                    IMAGES
                                 </a>
                             </td>
                         </tr>
