add images to product gallery

--- a/templates/dashboard/base_dashboard.html
+++ b/templates/dashboard/base_dashboard.html
@@ -28,8 +28,15 @@
         </div>
 
         <div class="content col s10">
-        {% block content %}
-        {% endblock content %}
+            {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% endif %}
+
+            {% block content %}{% endblock content %}
         </div>
       </div>
     </div>
