--- a/templates/dashboard/product/picture_list.html
+++ b/templates/dashboard/product/picture_list.html
@@ -5,20 +5,30 @@
     <div class="col s12">
         <a href="{% url 'product_panel:picture-create' %}" class="btn">Add image</a>
     </div>
-    {% for object in object_list %}
-        <div class="col s6 m4 l2">
-            <div class="card ">
-                <div class="card-image">
-                    <img class="materialboxed" src="/{% get_media_prefix %}{{ object.data }}" alt="">
-                    <span class="card-title" style="color: black !important;">{{ object.name }}</span>
-                </div>
-                <div class="card-action">
-                    <a href="#">Delete</a>
-                    <a href="#">Rename</a>
+    <div class="col s12 m12 l3">
+        {% include 'dashboard/generic_filter.html' %}
+    </div>
+    <div class="col s12 m12 l9">
+        <div class="row">
+            {% for object in object_list %}
+            <div class="col s6 m4 l2">
+                <div class="card ">
+                    <div class="card-image">
+                        <img class="materialboxed" src="/{% get_media_prefix %}{{ object.data }}" alt="">
+                        <span class="card-title" style="color: black !important;">{{ object.name }}</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="{% url 'product_panel:picture-delete' pk=object.pk %}">Delete</a>
+                        <a href="#">Rename</a>
+                    </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-    {% endfor %}
+    </div>
+    <div class="col s12">
+        {% include 'dashboard/paginator.html' %}
+    </div>
 {% endblock content %}
 
 {% block scripts %}
