--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -31,5 +31,20 @@
               <i class="material-icons">account_circle</i>Clients</div>
           <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
         </li>
+        <li>
+          <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
+              <i class="material-icons">assessment</i>Settings</div>
+            <div class="collapsible-body">
+                <div class="collection">
+                    <a href="" class="nav_link collection-item">Delivery</a>
+                </div>
+            </div>
+
+        </li>
+        <li>
+            <div class="collection">
+                    <a href="" class="nav_link collection-item">Logout</a>
+            </div>
+        </li>
     </ul>
 </div>
