user managment panel

--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -31,9 +31,9 @@
               <i class="material-icons">account_circle</i>Accounts</div>
           <div class="collapsible-body">
                  <div class="collection">
-                    <a href="#" class="nav_link collection-item">
+                    <a href="{% url 'users_panel:client-list' %}" class="nav_link collection-item">
                         Clients</a>
-                     <a href="#" class="nav_link collection-item">
+                     <a href="{% url 'users_panel:staff-list' %}" class="nav_link collection-item">
                         Staff</a>
                 </div>
           </div>
