--- a/templates/dashboard/delivery/delivery_option_update.html
+++ b/templates/dashboard/delivery/delivery_option_update.html
@@ -2,11 +2,15 @@
 {% load static %}
 
 {% block content %}
-    <div class="card">
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="submit" class="btn">
-    </form>
+    <div class="row">
+        <div class="col s12">
+            <div class="card">
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="submit" class="btn">
+                </form>
+            </div>
+        </div>
     </div>
 {% endblock content %}
