--- a/templates/webstore/product/product_list_item.html
+++ b/templates/webstore/product/product_list_item.html
@@ -13,7 +13,8 @@
         </a>
     </div>
     <div class="card-content">
-        <p>Price: {{ object.price }}</p>
+        <p>Price: <span {% if object.is_promo %}style="color:red;"{% endif %}>{{ object.price }}</span></p>
+        {% if object.is_promo %} {{ object.promo_message }} {% endif %}
         <a href="{% url 'product:product-detail' object.slug %}">
             <button class="btn small" style="width:100%;">details</button>
         </a>
