--- a/templates/webstore/order/order_list.html
+++ b/templates/webstore/order/order_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
- <table class="responsive-table"">
+ <table class="responsive-table">
 	<thead>
 		<tr>
 			<th>id</th>
