delivery templates fixes

--- a/templates/dashboard/delivery/delivery_list.html
+++ b/templates/dashboard/delivery/delivery_list.html
@@ -37,7 +37,7 @@
                             <a href="{% url 'delivery_panel:delivery-update' pk=object.pk %}">
                                 EDIT
                             </a>|
-                            <a href="">
+                            <a href="{% url 'delivery_panel:delivery-detail' pk=object.pk %}">
                                 DETAILS
                             </a>
                         </td>
