--- a/templates/dashboard/delivery/delivery_list.html
+++ b/templates/dashboard/delivery/delivery_list.html
@@ -10,11 +10,8 @@
 
     <!-- delivieries list -->
     <div class="col s12 m12 l9">
-        <div class="card">
-            <div class="card-title blue-grey lighten-4">
-                Deliveries list
-            </div>
-            <div class="card-contet">
+        <div class="card-panel">
+            <h4>Deliveries list</h4>
             <table class="striped responsive-table">
                 <thead>
                     <tr>
