--- a/templates/dashboard/delivery/delivery_option_list.html
+++ b/templates/dashboard/delivery/delivery_option_list.html
@@ -4,17 +4,14 @@
 {% block content %}
 <div class="row">
     <div class="col s12">
+        <div class="card-panel">
+
+        <h4>Deliveries options list</h4>
+
         <a href="{% url 'delivery_panel:delivery-option-create' %}"
            class="btn">
             Add option
         </a>
-    </div>
-    <div class="col s12 m12 l12">
-        <div class="card">
-            <div class="card-title blue-grey lighten-4">
-                Deliveries options list
-            </div>
-            <div class="card-contet">
             <table class="striped responsive-table">
                 <thead>
                     <tr>
