--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -1,5 +1,16 @@
 <!-- # TODO move style to css sheet -->
 <div style="  min-height: 100vh;width: 100%;">
+    <div>
+        <p class="center-align">
+            <i class="large material-icons">account_circle</i>
+            <br>
+            Welcome {{ request.user.username }}
+            <br>
+            <br>
+            <a href="" class="button"><i class="small material-icons">build</i></a>
+            <a href="{% url 'users_panel:logout' %}" class="button"><i class="small material-icons">highlight_off</i></a>
+        </p>
+    </div>
     <ul class='collapsible blue-grey darken-4 yellow-text text-lighten-5' style="border: 0px; box-shadow: 0px">
         <li>
           <div class="collapsible-header nav_header">
@@ -48,11 +59,6 @@
                 </div>
             </div>
 
-        </li>
-        <li>
-            <div class="collection">
-                    <a href="" class="nav_link collection-item">Logout</a>
-            </div>
         </li>
     </ul>
 </div>
