--- a/templates/webstore/core/welcome.html
+++ b/templates/webstore/core/welcome.html
@@ -33,3 +33,7 @@
 
     </div>
 {% endblock body %}
+
+{% block scripts %}
+    <script src="{% static 'scripts/product-list.js' %}"></script>
+{% endblock scripts %}
