--- a/templates/mail/order/awaiting_payment.html
+++ b/templates/mail/order/awaiting_payment.html
@@ -1,1 +1,3 @@
-{{ order }}
+<p>Dear {{ user.username }};</p>
+<p>Your order {{ order.uuid }} placed on {{ order.created }} is awating payment. Once you pleace the payment we will dispatch the parcel right away.</p>
+<p>Your sincere, store team</p>
