minor template fixes

--- a/templates/webstore/order/order_list.html
+++ b/templates/webstore/order/order_list.html
@@ -1,6 +1,8 @@
 {% extends "webstore/base.html" %}
 {% load static %}
 
+{% block title %}Your orders{% endblock title %}
+
 {% block body %}
  <table class="responsive-table">
 	<thead>
