--- a/templates/webstore/order/order_add_delivery.html
+++ b/templates/webstore/order/order_add_delivery.html
@@ -1,6 +1,8 @@
 {% extends "webstore/base.html" %}
 {% load static %}
 
+{% block title %}Order checkout{% endblock title %}
+
 {% block body %}
 <div class="row">
   <div class="col s12 m6 add_delivery">
