--- a/templates/dashboard/product/product_gallery.html
+++ b/templates/dashboard/product/product_gallery.html
@@ -12,7 +12,7 @@
         <div class="col s6 m4 l2" >
             <div class="card" id="gallery_image_{{ object.id }}">
                 <div class="card-image">
-                    <img class="materialboxed" src="/{% get_media_prefix %}{{ object.picture.data }}" alt="">
+                    <img class="materialboxed" src="/{{ object.picture.data.url }}" alt="">
                     <span class="card-title" style="color: black !important;">
                         {{ object.number }}
                         {{ object.picture.name }}
