--- a/templates/webstore/product/product_list.html
+++ b/templates/webstore/product/product_list.html
@@ -16,7 +16,7 @@
             </form>
         </div>
 
-        <div class="col s9">
+        <div class="col s12 m9">
             <div class="row">
             {% for object in object_list %}
                 <div class="col s12 m4">
