--- a/templates/dashboard/product/picture_list.html
+++ b/templates/dashboard/product/picture_list.html
@@ -14,7 +14,7 @@
             <div class="col s6 m4 l2">
                 <div class="card ">
                     <div class="card-image">
-                        <img class="materialboxed" src="/{% get_media_prefix %}{{ object.data }}" alt="">
+                        <img class="materialboxed" src="/{{ object.data.url }}" alt="">
                         <span class="card-title" style="color: black !important;">{{ object.name }}</span>
                     </div>
                     <div class="card-action">
