--- a/templates/dashboard/product/product_gallery_add.html
+++ b/templates/dashboard/product/product_gallery_add.html
@@ -8,7 +8,7 @@
         <div class="col s6 m4 l2">
             <div class="card ">
                 <div class="card-image">
-                    <img class="materialboxed" src="/{% get_media_prefix %}{{ picture.data }}" alt="{{ picture.name }}">
+                    <img class="materialboxed" src="/{{ picture.data.url }}" alt="{{ picture.name }}">
                     <span class="card-title" style="color: black !important;">
                         Select {{ picture.id }}
                     </span>
