--- a/templates/webstore/product/product_list_item.html
+++ b/templates/webstore/product/product_list_item.html
@@ -2,7 +2,7 @@
 <div class="card">
     <div class="card-image">
         {% if object.image %}
-            <img src="/{% get_media_prefix %}{{ object.image }}">
+            <img src="/{{ object.image.data.url }}">
         {% else %}
             <img src={% static 'images/default.png' %}>
         {% endif %}
